--- a/app/src/main/res/layout/information_text_layout.xml
+++ b/app/src/main/res/layout/information_text_layout.xml
@@ -14,6 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
+            android:textColor="#000000"
             android:text="Information section here"
             android:textSize="16sp" />
 
